--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -364,6 +364,14 @@ filename = "errors/test_dict1.py"
 asr = true
 
 [[test]]
+filename = "errors/test_zero_division.py"
+asr = true
+
+[[test]]
+filename = "errors/test_zero_division2.py"
+asr = true
+
+[[test]]
 filename = "errors/test_len1.py"
 asr = true
 
