add strict type checking for tuple

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -465,3 +465,7 @@ tokens = true
 [[test]]
 filename = "tokens/errors/paren4.py"
 tokens = true
+
+[[test]]
+filename = "errors/test_tuple1.py"
+asr = true
