--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -1,5 +1,6 @@
 # Possible tests:
 # ast ... run the Parser and output AST, compare against reference version
+# ast_new ... run the New Parser and output AST, compare against reference version
 # asr ... run the Semantics and output ASR, compare against reference version
 # llvm ... run the Semantics and output LLVM, compare against reference version
 # tokens ... output Tokens, compare against reference version
@@ -287,6 +288,10 @@ ast_new = true
 
 [[test]]
 filename = "parser/class_def1.py"
+ast_new = true
+
+[[test]]
+filename = "parser/dictionary1.py"
 ast_new = true
 
 # tests/errors
