--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -125,6 +125,10 @@ filename = "expr14.py"
 llvm = true
 
 [[test]]
+filename = "expr15.py"
+cpp = true
+
+[[test]]
 filename = "expr_01.py"
 ast = true
 asr = true
