--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -345,6 +345,10 @@ filename = "errors/test_list2.py"
 asr = true
 
 [[test]]
+filename = "errors/test_list4.py"
+asr = true
+
+[[test]]
 filename = "errors/test_set1.py"
 asr = true
 
