--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -184,6 +184,11 @@ filename = "global_scope1.py"
 ast = true
 asr = true
 
+[[test]]
+filename = "c_interop1.py"
+asr = true
+c = true
+
 # integration_tests
 
 [[test]]
