Add parsing rules for `...` and `None` with tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -335,6 +335,10 @@ ast_new = true
 filename = "parser/ellipsis1.py"
 ast = true
 
+[[test]]
+filename = "parser/ellipsis2.py"
+ast_new = true
+
 # tests/errors
 
 [[test]]
