--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -21,7 +21,9 @@ set(SRC
     codegen/x86_assembler.cpp
     codegen/asr_to_x86.cpp
     codegen/asr_to_wasm.cpp
-
+    codegen/wasm_to_wat.cpp
+    codegen/wasm_utils.cpp
+    
     pass/param_to_const.cpp
     pass/do_loops.cpp
     pass/for_all.cpp
