--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -202,6 +202,11 @@ filename = "../integration_tests/test_builtin.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/bindc_01.py"
+asr = true
+llvm = true
+
+[[test]]
 filename = "../integration_tests/test_builtin_abs.py"
 asr = true
 
