Enable exit_02 test

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -106,7 +106,7 @@ endmacro(RUN)
 
 # Test zero and non-zero exit code
 RUN(NAME exit_01             LABELS cpython llvm c)
-RUN(NAME exit_02     FAIL    LABELS cpython llvm)
+RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
 
 # Test all three backends
 RUN(NAME print_01            LABELS cpython llvm c)
