--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -112,7 +112,7 @@ RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
 RUN(NAME print_01            LABELS cpython llvm c)
 
 # CPython and LLVM
-RUN(NAME expr_01             LABELS cpython llvm)
+RUN(NAME expr_01             LABELS cpython llvm c)
 RUN(NAME expr_02             LABELS cpython llvm)
 RUN(NAME expr_03             LABELS cpython llvm)
 RUN(NAME expr_04             LABELS cpython llvm)
