--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -107,6 +107,8 @@ endmacro(RUN)
 # Test zero and non-zero exit code
 RUN(NAME exit_01             LABELS cpython llvm c)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
+RUN(NAME exit_01b            LABELS cpython llvm c)
+RUN(NAME exit_02b    FAIL    LABELS cpython llvm c)
 
 # Test all three backends
 RUN(NAME print_01            LABELS cpython llvm c)
