--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -207,6 +207,11 @@ asr = true
 llvm = true
 
 [[test]]
+filename = "../integration_tests/bindc_02.py"
+asr = true
+llvm = true
+
+[[test]]
 filename = "../integration_tests/test_builtin_abs.py"
 asr = true
 
