--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -156,6 +156,8 @@ RUN(NAME test_c_interop_02   LABELS cpython llvm c
         EXTRAFILES test_c_interop_02b.c)
 RUN(NAME test_c_interop_03   LABELS llvm
         EXTRAFILES test_c_interop_03b.c)
+RUN(NAME test_c_interop_04   LABELS llvm
+        EXTRAFILES test_c_interop_04b.c)
 RUN(NAME test_generics_01    LABELS cpython llvm)
 RUN(NAME test_cmath          LABELS cpython llvm)
 RUN(NAME test_complex        LABELS cpython llvm)
