--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -158,6 +158,8 @@ RUN(NAME test_c_interop_03   LABELS llvm
         EXTRAFILES test_c_interop_03b.c)
 RUN(NAME test_c_interop_04   LABELS llvm
         EXTRAFILES test_c_interop_04b.c)
+RUN(NAME test_c_interop_05   LABELS llvm
+        EXTRAFILES test_c_interop_05b.c)
 RUN(NAME test_generics_01    LABELS cpython llvm)
 RUN(NAME test_cmath          LABELS cpython llvm)
 RUN(NAME test_complex        LABELS cpython llvm)
