--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -154,7 +154,7 @@ RUN(NAME test_math_02        LABELS cpython llvm)
 RUN(NAME test_c_interop_01   LABELS cpython llvm c)
 RUN(NAME test_c_interop_02   LABELS cpython llvm c
         EXTRAFILES test_c_interop_02b.c)
-RUN(NAME test_c_interop_03   LABELS llvm c
+RUN(NAME test_c_interop_03   LABELS cpython llvm c
         EXTRAFILES test_c_interop_03b.c)
 RUN(NAME test_c_interop_04   LABELS cpython llvm c
         EXTRAFILES test_c_interop_04b.c)
