Updated reference tests

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,5 @@ integration_tests/test_c_interop_05
 integration_tests/test_c_interop_05.c
 integration_tests/bindc_01
 integration_tests/bindc_01.c
+integration_tests/bindc_02
+integration_tests/bindc_02.c
