--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -210,6 +210,10 @@ filename = "../integration_tests/structs_02.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/structs_03.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/bindc_01.py"
 asr = true
 llvm = true
