--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -271,6 +271,10 @@ llvm = true
 cpp = true
 
 [[test]]
+filename = "../integration_tests/test_bool_binop.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/test_issue_518.py"
 llvm = true
 c = true
