Add tests and update references.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -286,6 +286,11 @@ filename = "tokens/comment1.py"
 tokens = true
 
 [[test]]
+filename = "tokens/comment2.py"
+tokens = true
+ast_new = true
+
+[[test]]
 filename = "tokens/symbols1.py"
 tokens = true
 
