--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,5 @@ integration_tests/bindc_01
 integration_tests/bindc_01.c
 integration_tests/bindc_02
 integration_tests/bindc_02.c
+integration_tests/structs_01
+integration_tests/structs_01.c
