Added generated files path to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,5 @@ integration_tests/bindc_02
 integration_tests/bindc_02.c
 integration_tests/structs_01
 integration_tests/structs_01.c
+integration_tests/structs_02
+integration_tests/structs_02.c
