--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,5 @@ integration_tests/structs_01
 integration_tests/structs_01.c
 integration_tests/structs_02
 integration_tests/structs_02.c
+integration_tests/structs_03
+integration_tests/structs_03.c
