Fix integer casting of strings (#591)
* fix str to int casting
* add test file and integration test

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -534,6 +534,10 @@ asr = true
 filename = "errors/test_func_args.py"
 asr = true
 
+[[test]]
+filename = "errors/test_str_to_int.py"
+asr = true
+
 # tests/tokens/errors
 
 [[test]]
