--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -191,6 +191,10 @@ filename = "c_interop1.py"
 asr = true
 c = true
 
+[[test]]
+filename = "typevar1.py"
+asr = true
+
 # integration_tests
 
 [[test]]
