Updated reference tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -141,6 +141,14 @@ asr = true
 llvm = true
 
 [[test]]
+filename = "../integration_tests/expr_07.py"
+asr = true
+
+[[test]]
+filename = "../integration_tests/expr_09.py"
+asr = true
+
+[[test]]
 filename = "loop1.py"
 ast = true
 asr = true
