--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -133,6 +133,7 @@ RUN(NAME expr_04             LABELS cpython llvm c)
 RUN(NAME expr_05             LABELS cpython llvm)
 RUN(NAME expr_06             LABELS cpython llvm)
 RUN(NAME expr_08             LABELS llvm c)
+RUN(NAME expr_10             LABELS cpython)
 RUN(NAME test_types_01       LABELS cpython llvm)
 RUN(NAME test_str_01         LABELS cpython llvm)
 RUN(NAME test_str_02         LABELS cpython llvm)
