--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -135,7 +135,7 @@ RUN(NAME expr_06             LABELS cpython llvm)
 RUN(NAME expr_07             LABELS cpython llvm)
 RUN(NAME expr_08             LABELS llvm c)
 RUN(NAME expr_09             LABELS cpython llvm)
-RUN(NAME expr_10             LABELS cpython)
+RUN(NAME expr_10             LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm)
 RUN(NAME test_str_01         LABELS cpython llvm)
 RUN(NAME test_str_02         LABELS cpython llvm)
