--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -143,6 +143,7 @@ RUN(NAME test_str_03         LABELS cpython llvm c)
 RUN(NAME test_list_01        LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
+RUN(NAME test_decimal        LABELS cpython llvm)
 RUN(NAME test_numpy_01       LABELS cpython llvm)
 RUN(NAME test_numpy_02       LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
