--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -153,6 +153,11 @@ filename = "../integration_tests/expr_10.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/vec_01.py"
+asr = true
+pass = "loop_vectorise"
+
+[[test]]
 filename = "loop1.py"
 ast = true
 asr = true
