Add tests and update refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -367,6 +367,10 @@ filename = "parser/for1.py"
 ast_new = true
 
 [[test]]
+filename = "parser/comprehension1.py"
+ast_new = true
+
+[[test]]
 filename = "parser/try1.py"
 ast_new = true
 
