--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -571,6 +571,10 @@ asr = true
 filename = "errors/test_bitwise_on_complex.py"
 asr = true
 
+[[test]]
+filename = "errors/test_print1.py"
+asr = true
+
 # tests/tokens/errors
 
 [[test]]
