Registering new test in CMake and tests.toml

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -236,6 +236,10 @@ filename = "../integration_tests/structs_03.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/structs_04.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/bindc_01.py"
 asr = true
 llvm = true
