--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -593,6 +593,10 @@ asr = true
 filename = "errors/test_print1.py"
 asr = true
 
+[[test]]
+filename = "errors/test_pointer_types.py"
+asr = true
+
 # tests/tokens/errors
 
 [[test]]
