syntax fix in CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ on:
 
 
 jobs:
-  test-ubuntu-latest-py310
+  test-ubuntu-latest-py310:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
