--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -140,7 +140,6 @@ RUN(NAME test_str_03         LABELS cpython llvm c)
 RUN(NAME test_list_01        LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
-RUN(NAME test_string         LABELS llvm)
 RUN(NAME test_numpy_01       LABELS cpython llvm)
 RUN(NAME test_numpy_02       LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
@@ -154,6 +153,9 @@ RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_float  LABELS cpython llvm)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
 RUN(NAME test_builtin_round  LABELS cpython llvm)
+RUN(NAME test_builtin_capitalize  LABELS cpython llvm)
+RUN(NAME test_builtin_upper  LABELS cpython llvm)
+RUN(NAME test_builtin_lower  LABELS cpython llvm)
 RUN(NAME test_math1          LABELS cpython llvm)
 RUN(NAME test_math_02        LABELS cpython llvm)
 RUN(NAME test_c_interop_01   LABELS cpython llvm c)
