Add pass_llvm option to verify LLVM output after application of a pass

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -161,6 +161,7 @@ pass = "loop_vectorise"
 filename = "../integration_tests/func_inline_01.py"
 asr = true
 llvm = true
+pass_with_llvm = true
 pass = "inline_function_calls"
 
 [[test]]
