--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -183,6 +183,7 @@ RUN(NAME structs_01          LABELS cpython llvm c)
 RUN(NAME structs_02          LABELS llvm c)
 RUN(NAME structs_03          LABELS llvm c)
 RUN(NAME structs_04          LABELS cpython llvm c)
+RUN(NAME structs_05          LABELS llvm c)
 RUN(NAME test_str_to_int     LABELS cpython llvm)
 RUN(NAME test_platform       LABELS cpython llvm)
 RUN(NAME test_vars_01        LABELS cpython llvm)
