--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -467,23 +467,7 @@ filename = "errors/test_set3.py"
 asr = true
 
 [[test]]
-filename = "errors/test_pow1.py"
-asr = true
-
-[[test]]
-filename = "errors/test_pow2.py"
-asr = true
-
-[[test]]
-filename = "errors/test_pow3.py"
-asr = true
-
-[[test]]
-filename = "errors/test_pow4.py"
-asr = true
-
-[[test]]
-filename = "errors/test_pow5.py"
+filename = "errors/test_pow.py"
 asr = true
 
 [[test]]
