--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -153,9 +153,9 @@ RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_float  LABELS cpython llvm)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
 RUN(NAME test_builtin_round  LABELS cpython llvm)
-RUN(NAME test_builtin_capitalize  LABELS cpython llvm)
-RUN(NAME test_builtin_upper  LABELS cpython llvm)
-RUN(NAME test_builtin_lower  LABELS cpython llvm)
+RUN(NAME test_builtin_capitalize  LABELS cpython)
+RUN(NAME test_builtin_upper  LABELS cpython)
+RUN(NAME test_builtin_lower  LABELS cpython)
 RUN(NAME test_math1          LABELS cpython llvm)
 RUN(NAME test_math_02        LABELS cpython llvm)
 RUN(NAME test_c_interop_01   LABELS cpython llvm c)
