Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,5 @@ integration_tests/structs_03
 integration_tests/structs_03.c
 integration_tests/expr_08
 integration_tests/expr_08.c
+integration_tests/expr_12
+integration_tests/expr_12.c
