--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -158,6 +158,11 @@ c = true
 cpp = true
 
 [[test]]
+filename = "../integration_tests/expr_12.py"
+asr = true
+c = true
+
+[[test]]
 filename = "../integration_tests/vec_01.py"
 asr = true
 pass = "loop_vectorise"
