--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -625,6 +625,10 @@ asr = true
 filename = "errors/test_pointer_types.py"
 asr = true
 
+[[test]]
+filename = "errors/test_unsupported_type.py"
+asr = true
+
 # tests/tokens/errors
 
 [[test]]
