Add a test and update the references

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -447,6 +447,11 @@ ast_new = true
 filename = "parser/string1.py"
 ast_new = true
 
+[[test]]
+filename = "parser/global1.py"
+ast = true
+ast_new = true
+
 # tests/errors
 
 [[test]]
