Updated reference tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -141,6 +141,10 @@ asr = true
 llvm = true
 
 [[test]]
+filename = "../integration_tests/array_01_decl.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/expr_07.py"
 asr = true
 
