--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -350,6 +350,10 @@ filename = "../integration_tests/print_01.py"
 c = true
 cpp = true
 
+[[test]]
+filename = "../integration_tests/generics_01.py"
+asr = true
+
 # tests/tokens
 
 [[test]]
