enable symbol lookup feature for lsp

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -81,6 +81,7 @@ if (WITH_LSP)
   set (SRC ${SRC}
       lsp/JSONRPC2Connection.cpp
       lsp/LPythonServer.cpp
+      lsp/MessageHandler.cpp
   )
 endif()
 
