--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -156,6 +156,7 @@ RUN(NAME test_builtin_bool   LABELS cpython llvm)
 RUN(NAME test_builtin_pow    LABELS cpython llvm)
 RUN(NAME test_builtin_int    LABELS cpython llvm)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
+RUN(NAME test_builtin_str    LABELS cpython llvm)
 RUN(NAME test_builtin_float  LABELS cpython llvm)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
 RUN(NAME test_builtin_round  LABELS cpython llvm)
