Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -194,5 +194,7 @@ integration_tests/expr_08
 integration_tests/expr_08.c
 integration_tests/array_01_decl
 integration_tests/array_01_decl.c
+integration_tests/array_02_decl
+integration_tests/array_02_decl.c
 integration_tests/expr_12
 integration_tests/expr_12.c
