Add tests and Update the references

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -396,6 +396,10 @@ filename = "parser/statements1.py"
 ast_new = true
 
 [[test]]
+filename = "parser/statements2.py"
+ast_new = true
+
+[[test]]
 filename = "parser/if1.py"
 ast_new = true
 
