TEST: ASR: Add test for 'for in looping' over strings

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -141,6 +141,12 @@ asr = true
 llvm = true
 
 [[test]]
+filename = "../integration_tests/loop_01.py"
+ast = true
+asr = true
+llvm = true
+
+[[test]]
 filename = "../integration_tests/array_01_decl.py"
 asr = true
 
