--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,12 +23,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Cache conda
+        uses: actions/cache@v2
+        env:
+          CACHE_NUMBER: 0
+        with:
+          path: ~/conda_pkgs_dir
+          key:
+            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('ci/environment.yml') }}
+
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
           environment-file: ci/environment.yml
           python-version: ${{ matrix.python-version }}
-          auto-activate-base: false
+          use-only-tar-bz2: true
 
       - name: Install Windows Conda Packages
         if: contains(matrix.os, 'windows')
