--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -396,10 +396,6 @@ filename = "parser/statements1.py"
 ast_new = true
 
 [[test]]
-filename = "parser/statements2.py"
-ast_new = true
-
-[[test]]
 filename = "parser/if1.py"
 ast_new = true
 
@@ -462,6 +458,18 @@ ast_new = true
 [[test]]
 filename = "parser/global1.py"
 ast = true
+ast_new = true
+
+[[test]]
+filename = "parser/if2.py"
+ast_new = true
+
+[[test]]
+filename = "parser/for2.py"
+ast_new = true
+
+[[test]]
+filename = "parser/boolOp1.py"
 ast_new = true
 
 # tests/errors
