Add tests and update refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -428,6 +428,10 @@ filename = "parser/function_def2.py"
 ast_new = true
 
 [[test]]
+filename = "parser/function_def3.py"
+ast_new = true
+
+[[test]]
 filename = "parser/class_def1.py"
 ast_new = true
 
