Add tests and update refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -432,6 +432,10 @@ filename = "parser/class_def1.py"
 ast_new = true
 
 [[test]]
+filename = "parser/class_def2.py"
+ast_new = true
+
+[[test]]
 filename = "parser/dictionary1.py"
 ast_new = true
 
