--- a/editor/vscode/lsp-sample/server/package.json
+++ b/editor/vscode/lsp-sample/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lsp-sample-server",
+	"name": "lpyth-server",
 	"description": "Example implementation of a language server in node.",
 	"version": "1.0.0",
 	"author": "Microsoft Corporation",
