--- a/editor/vscode/lsp-sample/client/package.json
+++ b/editor/vscode/lsp-sample/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lsp-sample-client",
+	"name": "lpyth-client",
 	"description": "VSCode part of a language server",
 	"author": "Microsoft Corporation",
 	"license": "MIT",
