--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -400,6 +400,10 @@ filename = "parser/statements1.py"
 ast_new = true
 
 [[test]]
+filename = "parser/yield.py"
+ast_new = true
+
+[[test]]
 filename = "parser/if1.py"
 ast_new = true
 
