--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -359,6 +359,10 @@ filename = "../integration_tests/generics_01.py"
 asr = true
 llvm = true
 
+[[test]]
+filename = "../integration_tests/generics_sum.py"
+asr = true
+
 # tests/tokens
 
 [[test]]
