Registered modules_02 test

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -179,6 +179,10 @@ asr = true
 c = true
 
 [[test]]
+filename = "../integration_tests/modules_02.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/vec_01.py"
 asr = true
 pass = "loop_vectorise"
