Remove sum tets

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -379,6 +379,11 @@ filename = "../integration_tests/generics_01.py"
 asr = true
 llvm = true
 
+[[test]]
+filename = "../integration_tests/generics_array_01.py"
+asr = true
+llvm = true
+
 # tests/tokens
 
 [[test]]
