--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -370,6 +370,16 @@ filename = "../integration_tests/print_01.py"
 c = true
 cpp = true
 
+[[test]]
+filename = "../integration_tests/generics_01.py"
+asr = true
+llvm = true
+
+[[test]]
+filename = "../integration_tests/generics_array_01.py"
+asr = true
+llvm = true
+
 # tests/tokens
 
 [[test]]
