--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -382,6 +382,10 @@ asr = true
 filename = "../integration_tests/generics_array_01.py"
 asr = true
 
+[[test]]
+filename = "../integration_tests/generics_list_01.py"
+asr = true
+
 # tests/tokens
 
 [[test]]
