--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -153,6 +153,7 @@ RUN(NAME test_math           LABELS cpython llvm)
 RUN(NAME test_numpy_01       LABELS cpython llvm)
 RUN(NAME test_numpy_02       LABELS cpython llvm)
 RUN(NAME test_numpy_03       LABELS cpython llvm)
+RUN(NAME test_numpy_04       LABELS llvm)
 RUN(NAME elemental_01        LABELS cpython llvm)
 RUN(NAME elemental_02        LABELS cpython llvm)
 RUN(NAME elemental_03        LABELS cpython llvm)
