--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -157,6 +157,10 @@ filename = "../integration_tests/test_numpy_03.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/test_numpy_04.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/expr_09.py"
 asr = true
 
